vlib/v/checker/tests/immutable_var_postfix.out
vlib/v/checker/tests/immutable_var_postfix.v:3:2: error: `a` is immutable, declare it with `mut` to make it mutable
    1 | fn main() {
    2 |     a := 1
    3 |     a++
      |     ^
    4 |     a--
    5 | }
vlib/v/checker/tests/immutable_var_postfix.v:4:2: error: `a` is immutable, declare it with `mut` to make it mutable
    2 |     a := 1
    3 |     a++
    4 |     a--
      |     ^
    5 | }
