vlib/v/checker/tests/immutable_var_postfix.vv
fn main() {
	a := 1
	a++
	a--
}
